--- a/configs/data_generator/config.yaml
+++ b/configs/data_generator/config.yaml
@@ -1,6 +1,6 @@
-environment_name: MiniGrid-BlockedDoorKey-8x8 #options: [MiniGrid-DoorKey-16x16-v0, MiniGrid-FourRooms-v0, MiniGrid-LavaCrossingS11N5-v0, MiniGrid-LavaCrossingS9N3-v0, MiniGrid-Empty-5x5-v0]
+environment_name: MiniGrid-DoorKey-6x6 #options: [MiniGrid-DoorKey-16x16-v0, MiniGrid-FourRooms-v0, MiniGrid-LavaCrossingS11N5-v0, MiniGrid-LavaCrossingS9N3-v0, MiniGrid-Empty-5x5-v0]
 # environment_name: MiniGrid-BlockedUnlockPickup-v0 #options: [MiniGrid-DoorKey-16x16-v0, MiniGrid-FourRooms-v0, MiniGrid-LavaCrossingS11N5-v0, MiniGrid-LavaCrossingS9N3-v0, MiniGrid-Empty-5x5-v0]
-observation_space: expert #options: [image, expert]
+observation_space: image #options: [image, expert]
 max_steps: 1000
 highlight: False
 
@@ -64,4 +64,4 @@ exploration_bonus: False
 record_video: false
 
 #padding size for scaling visual observations
-padded_size: null #null #[64,64]
+padded_size: [64,64] #null #[64,64]
