--- a/configs/env/blocked_doorkey_test.yaml
+++ b/configs/env/blocked_doorkey_test.yaml
@@ -3,6 +3,7 @@ defaults:
 environment_name: MiniGrid-BlockedDoorKey-8x8 #options: [MiniGrid-DoorKey-16x16-v0, MiniGrid-FourRooms-v0, MiniGrid-LavaCrossingS11N5-v0, MiniGrid-LavaCrossingS9N3-v0, MiniGrid-Empty-5x5-v0]
 max_steps: 1000
 highlight: False
+reward_01: False
 
 #constant capturing all types of state attributes in the expert state
 state_attributes: [agent_pos, agent_dir, key_pos, door_pos, holding_key, door_locked, door_open, ball_pos, holding_ball, goal_pos]
