--- a/configs/env/empty_16x16.yaml
+++ b/configs/env/empty_16x16.yaml
@@ -3,6 +3,7 @@ defaults:
 environment_name: MiniGrid-Empty-16x16-v0 #options: [MiniGrid-DoorKey-16x16-v0, MiniGrid-FourRooms-v0, MiniGrid-LavaCrossingS11N5-v0, MiniGrid-LavaCrossingS9N3-v0, MiniGrid-Empty-5x5-v0]
 max_steps: 5000
 highlight: False
+reward_01: False
 
 #constant capturing all types of state attributes in the expert state
 state_attributes: [agent_pos, agent_dir, goal_pos]
