--- a/configs/shared/general.yaml
+++ b/configs/shared/general.yaml
@@ -1,11 +1,8 @@
-observation_space: expert #options: [image, expert, factored]
+observation_space: image #options: [image, expert]
 max_steps: 1000
 
 #options: [random_rotation: [max_degrees, p], random_scaling: scalar, random_masking: [num_holes (min, max), hole_height_range (min, max), hole_width_range (min, max), probability], random_greyscale: probability, random_horz_flip: probability, random_vert_flip: probability, random_color_jitter: [brightness (min, max), contrast (min, max), saturation (min, max), hue (min, max), prob]]
 transformations: {
-  random_greyscale: {p: 0.5},
-  random_color_jitter: {brightness: [0.7, 1.4], contrast: [0.7, 1.4], saturation: [0.7, 1.4], hue: [-0.5, 0.5]},
-  random_masking: { num_holes_range: [3,3], hole_height_range: [3,5], hole_width_range: [3,5], p: 0.5 }
 }
 
 # 'random_rotation': A.Rotate(limit=transformation_types['random_rotation'][0], p=transformation_types['random_rotation'][1]),
@@ -23,7 +20,7 @@ reset_type: default
 deterministic_action: true
 
 #options: float between 0-1.0
-action_stochasticity: 0.9
+action_stochasticity: 0.0
 
 #options: true/false
 exploration_bonus: False
