--- a/configs/shared/general_test.yaml
+++ b/configs/shared/general_test.yaml
@@ -1,4 +1,4 @@
-observation_space: expert #options: [image, expert, factored]
+observation_space: expert #options: [image, expert]
 max_steps: 1000
 
 #options: [random_rotation: [max_degrees, p], random_scaling: scalar, random_masking: [num_holes (min, max), hole_height_range (min, max), hole_width_range (min, max), probability], random_greyscale: probability, random_horz_flip: probability, random_vert_flip: probability, random_color_jitter: [brightness (min, max), contrast (min, max), saturation (min, max), hue (min, max), prob]]
@@ -23,7 +23,7 @@ reset_type: default
 deterministic_action: true
 
 #options: float between 0-1.0
-action_stochasticity: 0.9
+action_stochasticity: 0.0
 
 #options: true/false
 exploration_bonus: False
