--- a/configs/env/cartpole_gen_test.yaml
+++ b/configs/env/cartpole_gen_test.yaml
@@ -32,3 +32,10 @@ transformations: {
 data_generator:
   _target_: data.data_generator.CartPoleDataGenerator
   cfg: ${env} 
+
+cartpole_physics_params: {
+  'masspole': [0.05,0.5],
+  'length': [0.25,0.75],
+  'force_mag': [5,15],
+  'gravity': [9.6, 10.0]
+}
